# chinook_db_sql_alchemy

./: .gitignore  README.md  pyproject.toml  requirements.txt
chinook/: __init__.py  __main__.py  bootstrap.py  commit_samples.py  sample_data.py
chinook/models/: __init__.py  albums.py  artists.py  base.py  customers.py  employees.py  engine.py  genres.py  invoice_items.py  invoices.py  media_types.py  playlist_track.py  playlists.py  tracks.py
chinook/protocols/: sql_alchemy_config.py
tests/: test_app.py
