[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "chinook"
dependencies = [
    "SQLAlchemy >= 2.0",
    "pandas >= 2.3.1"
]
version = "0.0.1"
authors = [
  { name="av-guy" },
]
description = "A reusable, installable Python package for working with the Chinook sample database"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/av-guy/chinook_db_sql_alchemy"
Issues = "https://github.com/av-guy/chinook_db_sql_alchemy/issues"